Import of TOKUHIROM/Image-JpegCheck-0.02 from CPAN.
gitpan-cpan-distribution: Image-JpegCheck
gitpan-cpan-version:      0.02
gitpan-cpan-path:         TOKUHIROM/Image-JpegCheck-0.02.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 Revision history for Perl extension Image::JpegCheck
 
+0.02
+
+        - added xs version. xs version is 150% faster.
+
 0.01    Thu Apr 23 17:00:44 2009
         - original version
