Import of TOKUHIROM/Image-JpegCheck-0.03 from CPAN.
gitpan-cpan-distribution: Image-JpegCheck
gitpan-cpan-version:      0.03
gitpan-cpan-path:         TOKUHIROM/Image-JpegCheck-0.03.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Image::JpegCheck
 
+0.03
+
+        - brush up xs code
+
 0.02
 
         - added xs version. xs version is 150% faster.
