Import of TOKUHIROM/Image-JpegCheck-0.04 from CPAN.
gitpan-cpan-distribution: Image-JpegCheck
gitpan-cpan-version:      0.04
gitpan-cpan-path:         TOKUHIROM/Image-JpegCheck-0.04.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Image::JpegCheck
 
+0.04
+
+        - remove xs(pp is fast enough)
+        - fixed bug for some jpeg file(patch by kazeburo++)
+
 0.03
 
         - brush up xs code
