Import of TOKUHIROM/Image-JpegCheck-0.05 from CPAN.
gitpan-cpan-distribution: Image-JpegCheck
gitpan-cpan-version:      0.05
gitpan-cpan-path:         TOKUHIROM/Image-JpegCheck-0.05.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Image::JpegCheck
 
+0.05
+
+        - added scalarref support
+        - added Path::Class::File support
+        - added validation code(yappo++)
+
 0.04
 
         - remove xs(pp is fast enough)
