Import of TOKUHIROM/Image-JpegCheck-0.06 from CPAN.
gitpan-cpan-distribution: Image-JpegCheck
gitpan-cpan-version:      0.06
gitpan-cpan-path:         TOKUHIROM/Image-JpegCheck-0.06.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Image::JpegCheck
 
+0.06
+
+        - fixed test code.
+          (no feature changes)
+
 0.05
 
         - added scalarref support
