--- a/Changes
+++ b/Changes
@@ -1,9 +1,12 @@
 Revision history for Perl extension Image::JpegCheck
 
+0.07
+
+        - I failed cpan upload.re-release.
+
 0.06
 
-        - fixed test code.
-          (no feature changes)
+        - validate EOI for truncated jpeg file(hirose31++)
 
 0.05
 
