Import of TOKUHIROM/Image-JpegCheck-0.08 from CPAN.
gitpan-cpan-distribution: Image-JpegCheck
gitpan-cpan-version:      0.08
gitpan-cpan-path:         TOKUHIROM/Image-JpegCheck-0.08.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Image::JpegCheck
 
+0.08
+
+        - support stuffing byte
+          (yappo++)
+
 0.07
 
         - I failed cpan upload.re-release.
