Import of TOKUHIROM/Image-JpegCheck-0.10 from CPAN.
gitpan-cpan-distribution: Image-JpegCheck
gitpan-cpan-version:      0.10
gitpan-cpan-path:         TOKUHIROM/Image-JpegCheck-0.10.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Image::JpegCheck
 
+0.10
+
+    - detect GLOB or not by Scalar::Util::openhandle
+
 0.09
 
         - 0.08's change is not compat for Ricoh GRX.
